# TS-Django

./: README.md  manage.py  pyproject.toml
tsdjango/: asgi.py  settings.py  urls.py  wsgi.py
